--- a/reed.html
+++ b/reed.html
@@ -1,83 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HouseForAll</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HomeNest - Rent & List Houses</title>
   <style>
     body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
+      padding: 0;
       color: #333;
     }
     header {
-      background-color: #e60000; /* Red */
+      background-color: #007bff;
       color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
       padding: 20px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .hero {
-      text-align: center;
-      padding: 80px 20px;
-      background: linear-gradient(135deg, #e60000, #ff4d4d);
-      color: white;
-      animation: fadeIn 2s ease-in-out;
-    }
-    .hero h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
-    .hero button {
       background: white;
-      color: #e60000;
-      border: none;
-      padding: 15px 30px;
-      font-size: 16px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #007bff;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
       font-weight: bold;
-      border-radius: 25px;
-      cursor: pointer;
-      transition: 0.3s;
     }
-    .hero button:hover {
-      background: #ffcccc;
-      transform: scale(1.05);
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    footer {
-      background-color: #e60000;
-      color: white;
-      text-align: center;
+    input, select, button {
+      width: 100%;
       padding: 10px;
-      margin-top: 50px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .form-section {
+      margin-bottom: 30px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #eee;
+    }
+    .preview {
+      margin-top: 10px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+    .preview img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border: 1px solid #ddd;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    HouseForAll
+    <h1>HomeAsap</h1>
+    <p>Rent or List Your Property Securely</p>
   </header>
 
-  <section class="hero">
-    <h1>Welcome to HouseForAll</h1>
-    <p>Connecting you with the best available accommodation is our pyority.</p>
-    <button onclick="alert('Your order for Oscroh has been placed!')">Order for Oscroh</button>
-  </section>
+  <div class="container">
+    <!-- Registration Form -->
+    <section class="form-section">
+      <h2>Create Your Account</h2>
+      <form id="registerForm">
+        <label for="fullname">Full Name</label>
+        <input type="text" id="fullname" name="fullname" required />
 
-  <footer>
-    &copy; 2025 HouseForAll. All Rights Reserved.
-  </footer>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" required />
+
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required />
+
+        <label for="idType">Verification Document</label>
+        <select id="idType" name="idType" required>
+          <option value="">-- Select ID Type --</option>
+          <option value="passport">International Passport</option>
+          <option value="nin">National Identity Number (NIN)</option>
+        </select>
+
+        <label for="idNumber">ID Number</label>
+        <input type="text" id="idNumber" name="idNumber" placeholder="e.g., A12345678 or NIN-1234567890" required />
+
+        <label for="idUpload">Upload Document (PDF or Image)</label>
+        <input type="file" id="idUpload" name="idUpload" accept="image/*,application/pdf" required />
+
+        <button type="submit">Register & Verify</button>
+      </form>
+    </section>
+
+    <!-- House Listing Form (Only after verification) -->
+    <section class="form-section">
+      <h2>List a House for Rent</h2>
+      <form id="listingForm" style="display: none;"> <!-- Hidden until verified -->
+        <label for="title">House Title</label>
+        <input type="text" id="title" name="title" required />
+
+        <label for="address">Full Address</label>
+        <input type="text" id="address" name="address" required />
+
+        <label for="price">Monthly Rent (₦)</label>
+        <input type="number" id="price" name="price" required />
+
+        <label for="bedrooms">Bedrooms</label>
+        <input type="number" id="bedrooms" name="bedrooms" min="1" required />
+
+        <label for="bathrooms">Bathrooms</label>
+        <input type="number" id="bathrooms" name="bathrooms" min="1" required />
+
+        <label for="description">Description</label>
+        <textarea id="description" name="description" rows="4" style="width:100%;"></textarea>
+
+        <label for="images">Upload House Photos</label>
+        <input type="file" id="images" name="images" accept="image/*" multiple required />
+
+        <div class="preview" id="imagePreview"></div>
+
+        <button type="submit">Post Listing</button>
+      </form>
+      <p id="verificationNotice">You must verify your identity before listing a house.</p>
+    </section>
+  </div>
+
+  <script>
+    // Simulate registration and verification
+    document.getElementById("registerForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      alert("Thank you! Your account has been created. Your document is under review for verification.");
+      // In real app: send data to backend, verify ID via OCR/API
+      document.getElementById("listingForm").style.display = "block";
+      document.getElementById("verificationNotice").style.display = "none";
+    });
+
+    // Image preview for house listing
+    document.getElementById("images").addEventListener("change", function(e) {
+      const preview = document.getElementById("imagePreview");
+      preview.innerHTML = "";
+      const files = e.target.files;
+      for (let file of files) {
+        if (file.type.match('image.*')) {
+          const reader = new FileReader();
+          reader.onload = function(f) {
+            const img = document.createElement("img");
+            img.src = f.target.result;
+            preview.appendChild(img);
+          };
+          reader.readAsDataURL(file);
+        }
+      }
+    });
+  </script>
 
 </body>
 </html>
-
